--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -356,9 +356,17 @@ header .search-bar {
 /* ===== Responsive ===== */
 @media (max-width: 860px) {
 	.current {
-		grid-template-columns: 1fr;
+		grid-template-columns: 1fr 1fr;
 	}
 
+	.box-1 {
+		grid-column: span 2;
+	}
+
+	.box-2,
+	.box-3 {
+		grid-column: span 1;
+	}
 	.extra-info {
 		grid-template-columns: 1fr 1fr;
 	}
